--- a/index.html
+++ b/index.html
@@ -17,24 +17,19 @@
 <body>
     <div id="main">
 
-        <!-- Modal toggle -->
-        <button data-modal-target="default-modal" data-modal-toggle="default-modal" class="block" type="button">
-            <i class="ri-align-justify text-3xl"></i>
-        </button>
-
         <!-- Main modal -->
         <div id="default-modal" tabindex="-1" aria-hidden="true"
-            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-[999] justify-center items-center w-full md:inset-0 h-[calc(90%-1rem)] max-h-full">
             <div class="relative p-4 w-full max-w-2xl max-h-full">
                 <!-- Modal content -->
-                <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                <div class="relative  bg-[#1F2937] rounded-lg shadow">
                     <!-- Modal header -->
                     <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
-                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-                            Terms of Service
+                        <h3 class="text-xl font-semibold  text-white">
+                            What's Included
                         </h3>
                         <button type="button"
-                            class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+                            class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
                             data-modal-hide="default-modal">
                             <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
                                 viewBox="0 0 14 14">
@@ -45,35 +40,22 @@
                         </button>
                     </div>
                     <!-- Modal body -->
-                    <div class="p-4 md:p-5 space-y-4">
-                        <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-                            With less than a month to go before the European Union enacts new consumer privacy laws for
-                            its citizens, companies around the world are updating their terms of service agreements to
-                            comply.
-                        </p>
-                        <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-                            The European Union’s General Data Protection Regulation (G.D.P.R.) goes into effect on May
-                            25 and is meant to ensure a common set of data rights in the European Union. It requires
-                            organizations to notify users as soon as possible of high-risk data breaches that could
-                            personally affect them.
-                        </p>
+                    <div class="p-4 md:p-5 space-y-4 flex flex-col">
+                        <a href="/"><button class="px-3 py-2 bg-white text-black rounded w-full">Log In</button></a>
+                        <a href="/"><button class="px-3 py-2 bg-white text-black rounded w-full">Home</button></a>
+                        <a href="#morefeatures"><button
+                                class="px-3 py-2 bg-white text-black rounded w-full">Features</button></a>
+                        <a href="#twohands"><button
+                                class="px-3 py-2 bg-white text-black rounded w-full">Templates</button></a>
+                        <a href="pricing.html"><button
+                                class="px-3 py-2 bg-white text-black rounded w-full">Pricing</button></a>
                     </div>
-                    <!-- Modal footer -->
-                    <div class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
-                        <a href="#twohands">
-                            <button data-modal-hide="default-modal" type="button"
-                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">I
-                                accept</button>
-                        </a>
-                        <button data-modal-hide="default-modal" type="button"
-                            class="ms-3 text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">Decline</button>
-                    </div>
+
                 </div>
             </div>
         </div>
 
-
-        <nav
+        <!-- <nav
             class="mt-3 md:mt-0 text-white w-full z-[999] top-0 start-0 backdrop-filter backdrop-blur-sm bg-opacity-10 sticky  bg-[#101110]  px-[2vw] py-[1.2vw] md:text-2xl text-base overflow-hidden">
 
             <div id="alert-border-3"
@@ -145,8 +127,70 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav> -->
 
+
+
+        <div id="nav"
+            class="mt-3 md:mt-0 text-base md:text-2xl  z-[999] px-[2vw] py-[1.2vw] overflow-hidden sticky top-0 backdrop-filter backdrop-blur-sm bg-opacity-10  bg-[#101110] ">
+
+            <div id="alert-border-3"
+                class="w-[100vw]  flex items-center p-4 mb-4  border-t-4 text-green-400 bg-gray-800 border-green-800 -mx-[2vw] -my-[1.2vw] "
+                role="alert">
+
+                <div class="ms-3 text-sm font-medium">
+                    A simple success alert with an <a href="#"
+                        class="font-semibold underline hover:no-underline">example
+                        link</a>. Give it a click if you like.
+                </div>
+                <button type="button"
+                    class="ms-auto -mx-1.5 -my-1.5  rounded-lg focus:ring-2 focus:ring-green-400 p-1.5 inline-flex items-center justify-center h-8 w-8 bg-gray-800 text-green-400 hover:bg-gray-700 md:mr-5"
+                    data-dismiss-target="#alert-border-3" aria-label="Close">
+                    <span class="sr-only">Dismiss</span>
+                    <i class="ri-xrp-line"></i>
+                </button>
+            </div>
+
+            <div class="flex justify-between  items-center">
+                <div id="firstnav ">
+                    <a href="#" class="flex gap-2 items-center"> <img src="assests/logo.jpg" alt=""
+                            class="w-[30px] md:w-[40px] rounded-full">
+                        <span>Bizfunnel</span></a>
+                </div>
+                <div id="secondnav" class=" hidden md:flex gap-[3vw]">
+                    <a href="/"
+                        class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Home</a>
+
+                    <a href="#morefeatures"
+                        class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Features</a>
+                    <a href="#twohands"
+                        class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Templates</a>
+                    <a href="pricing.html" target="_blank"
+                        class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Pricing</a>
+                </div>
+                <div id="thirdnav" class="text-xs md:text-base flex gap-[2vw] items-center">
+                    <button
+                        class="hidden md:block px-[7px] md:px-[1vw]  py-[5px] md:py-[0.5vw] bg-[#2C2A2C] border-[1px] border-gray-500 hover:border-[#FEFEFF] rounded-md duration-100">Log
+                        In</button>
+                    <a href="#_"
+                        class="relative inline-flex items-center justify-center px-2 py-1 md:px-6 md:py-3 md:font-medium tracking-tighter text-[#FEFEFF] bg-gray-800 rounded-md group">
+                        <span
+                            class="absolute inset-0 w-full h-full mt-1 ml-1 transition-all duration-300 ease-in-out bg-green-600 rounded-md group-hover:mt-0 group-hover:ml-0"></span>
+                        <span class="absolute inset-0 w-full h-full bg-[#FEFEFF] rounded-md "></span>
+                        <span
+                            class="absolute inset-0 w-full h-full transition-all duration-200 ease-in-out delay-100 bg-green-600 rounded-md opacity-0 group-hover:opacity-100 "></span>
+                        <span
+                            class="relative text-green-600 transition-colors duration-200 ease-in-out delay-100 group-hover:text-[#FEFEFF]">Buy
+                            Now</span>
+                    </a>
+                    <button data-modal-target="default-modal" data-modal-toggle="default-modal"
+                        class="block mx-[15px] md:hidden" type="button">
+                        <i class="ri-align-justify text-[24px]"></i>
+                    </button>
+                </div>
+
+            </div>
+        </div>
 
 
         <div id="hero" class="mb-[3vw] md:mt-[85px] mt-[49px] ">
@@ -251,7 +295,7 @@
             </div>
         </div>
 
-        <div class="main2 px-[9.5vw] relative overflow-hidden">
+        <div class="main2 px-[9.5vw] relative overflow-hidden ">
             <div id="marqueeEffect" class="mt-[50px] md:mt-[7.5vw] ">
                 <h1 class="text-center  text-3xl md:text-5xl font-semibold" style="line-height: 1.2;">More Lead, Better
                     Conversion &
@@ -999,8 +1043,7 @@
 
             <!-- component -->
             <div class="2xl:container md:mx-auto md:py-12 lg:px-20 md:px-6 py-9 px-4 ">
-                <h2
-                    class="font-semibold text-white lg:text-4xl text-3xl lg:leading-9 md:leading-7 leading-9 ">
+                <h2 class="font-semibold text-white lg:text-4xl text-3xl lg:leading-9 md:leading-7 leading-9 ">
                     Frequently Asked Questions</h2>
                 <div class="mt-4 flex md:justify-between md:items-start md:flex-row flex-col justify-start items-start">
                     <div class="">
@@ -1029,8 +1072,7 @@
                                     </svg>
                                 </button>
                             </div>
-                            <p id="para1"
-                                class="hidden font-normal text-gray-400 text-base leading-6  mt-4 w-11/12">
+                            <p id="para1" class="hidden font-normal text-gray-400 text-base leading-6  mt-4 w-11/12">
                                 We are covering every major country worldwide. The shipment leaves from US as it is our
                                 headquarter. Some extra information you probably need to add here so that the customer
                                 is clear of their wanted expectations.</p>
@@ -1055,8 +1097,7 @@
                                     </svg>
                                 </button>
                             </div>
-                            <p id="para2"
-                                class="hidden font-normal text-gray-400 text-base leading-6  mt-4 w-11/12">
+                            <p id="para2" class="hidden font-normal text-gray-400 text-base leading-6  mt-4 w-11/12">
                                 We are covering every major country worldwide. The shipment leaves from US as it is our
                                 headquarter. Some extra information you probably need to add here so that the customer
                                 is clear of their wanted expectations.</p>
@@ -1081,8 +1122,7 @@
                                     </svg>
                                 </button>
                             </div>
-                            <p id="para3"
-                                class="hidden font-normal text-gray-400 text-base leading-6 mt-4 w-11/12">
+                            <p id="para3" class="hidden font-normal text-gray-400 text-base leading-6 mt-4 w-11/12">
                                 We are covering every major country worldwide. The shipment leaves from US as it is our
                                 headquarter. Some extra information you probably need to add here so that the customer
                                 is clear of their wanted expectations.</p>
@@ -1107,8 +1147,7 @@
                                     </svg>
                                 </button>
                             </div>
-                            <p id="para4"
-                                class="hidden font-normal text-gray-400 text-base leading-6  mt-4 w-11/12">
+                            <p id="para4" class="hidden font-normal text-gray-400 text-base leading-6  mt-4 w-11/12">
                                 We are covering every major country worldwide. The shipment leaves from US as it is our
                                 headquarter. Some extra information you probably need to add here so that the customer
                                 is clear of their wanted expectations.</p>
