--- a/pricing.html
+++ b/pricing.html
@@ -25,63 +25,92 @@
 
 <body class=" text-white">
 
-    <nav
-        class="mt-3 md:mt-0 text-white w-full z-[999] top-0 start-0 backdrop-filter backdrop-blur-sm bg-opacity-10 sticky  bg-[#101110]  px-[2vw] py-[1.2vw] md:text-2xl text-base overflow-hidden">
+           <!-- Main modal -->
+           <div id="default-modal" tabindex="-1" aria-hidden="true"
+           class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-[999] justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+           <div class="relative p-4 w-full max-w-2xl max-h-full">
+               <!-- Modal content -->
+               <div class="relative  bg-[#1F2937] rounded-lg shadow">
+                   <!-- Modal header -->
+                   <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+                       <h3 class="text-xl font-semibold  text-white">
+                           What's Included
+                       </h3>
+                       <button type="button"
+                           class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
+                           data-modal-hide="default-modal">
+                           <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+                               viewBox="0 0 14 14">
+                               <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                   stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                           </svg>
+                           <span class="sr-only">Close modal</span>
+                       </button>
+                   </div>
+                   <!-- Modal body -->
+                   <div class="p-4 md:p-5 space-y-4 flex flex-col">
+                       <a href="/"><button class="px-3 py-2 bg-white text-black rounded w-full">Log In</button></a>
+                       <a href="/"><button class="px-3 py-2 bg-white text-black rounded w-full">Home</button></a>
+                       <a href="#morefeatures"><button
+                               class="px-3 py-2 bg-white text-black rounded w-full">Features</button></a>
+                       <a href="#twohands"><button class="px-3 py-2 bg-white text-black rounded w-full">Templates</button></a>
+                       <a href="pricing.html"><button
+                               class="px-3 py-2 bg-white text-black rounded w-full">Pricing</button></a>
+                   </div>
 
-        <div class=" flex flex-wrap items-center justify-between mx-auto">
-            <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="assests/logo.jpg" class="h-8 rounded-full" alt="Bizfunnel Logo">
-                <span class="self-center text-xl md:text-2xl font-semibold whitespace-nowrap">Bizfunnel</span>
-            </a>
-            <div class="text-xs md:text-base flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse gap-[2vw]">
-                <button
-                    class="hidden md:block px-[7px] md:px-[1vw]  py-[5px] md:py-[0.5vw] bg-[#2C2A2C] border-[1px] border-gray-500 hover:border-[#FEFEFF] rounded-md duration-100">Log
-                    In</button>
-                <a href="#_"
-                    class="relative inline-flex items-center justify-center px-2 py-1 md:px-6 md:py-3 md:font-medium tracking-tighter text-[#FEFEFF] bg-gray-800 rounded-md group">
-                    <span
-                        class="absolute inset-0 w-full h-full mt-1 ml-1 transition-all duration-300 ease-in-out bg-green-600 rounded-md group-hover:mt-0 group-hover:ml-0"></span>
-                    <span class="absolute inset-0 w-full h-full bg-[#FEFEFF] rounded-md "></span>
-                    <span
-                        class="absolute inset-0 w-full h-full transition-all duration-200 ease-in-out delay-100 bg-green-600 rounded-md opacity-0 group-hover:opacity-100 "></span>
-                    <span
-                        class="relative text-green-600 transition-colors duration-200 ease-in-out delay-100 group-hover:text-[#FEFEFF]">Buy
-                        Now</span>
-                </a>
-                <button data-collapse-toggle="navbar-sticky" type="button"
-                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 "
-                    aria-controls="navbar-sticky" aria-expanded="false">
-                    <span class="sr-only">Open main menu</span>
-                    <i class="ri-align-justify text-3xl" id="openButton"></i>
-                    <i class="ri-close-fill text-3xl hidden" id="closeButton"></i>
-                </button>
-            </div>
-            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 " id="navbar-sticky">
-                <ul
-                    class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg  md:gap-[3vw] rtl:space-x-reverse md:flex-row md:mt-0 md:border-0  md:items-center md:bg-transparent bg-[#232223]">
-                    <li>
-                        <a href="/"
-                            class="block py-2 px-3 md:hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100 active:bg-green-600 rounded md:active:bg-transparent"
-                            aria-current="page">Home</a>
-                    </li>
-                    <li>
-                        <a href="#morefeatures"
-                            class="block py-2 px-3 md:p-0 md:hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100 active:bg-green-600 rounded md:active:bg-transparent">Features</a>
-                    </li>
-                    <li>
-                        <a href="#twohands"
-                            class="block py-2 px-3 md:p-0 md:hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100 active:bg-green-600 rounded md:active:bg-transparent">Templates</a>
-                    </li>
-                    <li>
-                        <a href="pricing.html" target="_blank"
-                            class="block py-2 px-3 md:p-0 md:hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100 active:bg-green-600 rounded md:active:bg-transparent">Pricing</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+               </div>
+           </div>
+       </div>
 
-    <main class="main3">
+    
+
+       <div id="nav"
+           class="mt-3 md:mt-0 text-base md:text-2xl  z-[999] px-[2vw] py-[1.2vw] overflow-hidden sticky top-0 backdrop-filter backdrop-blur-sm bg-opacity-10  bg-[#101110] ">
+
+         
+
+           <div class="flex justify-between  items-center">
+               <div id="firstnav ">
+                   <a href="index.html" class="flex gap-2 items-center"> <img src="assests/logo.jpg" alt=""
+                           class="w-[30px] md:w-[40px] rounded-full">
+                       <span>Bizfunnel</span></a>
+               </div>
+               <div id="secondnav" class=" hidden md:flex gap-[3vw]">
+                   <a href="index.html"
+                       class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Home</a>
+
+                   <a href="#morefeatures"
+                       class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Features</a>
+                   <a href="#twohands"
+                       class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Templates</a>
+                   <a href="pricing.html" target="_blank"
+                       class="hover:underline decoration-green-600 underline-offset-8  decoration-2 duration-100">Pricing</a>
+               </div>
+               <div id="thirdnav" class="text-xs md:text-base flex gap-[2vw] items-center">
+                   <button
+                       class="hidden md:block px-[7px] md:px-[1vw]  py-[5px] md:py-[0.5vw] bg-[#2C2A2C] border-[1px] border-gray-500 hover:border-[#FEFEFF] rounded-md duration-100">Log
+                       In</button>
+                   <a href="#_"
+                       class="relative inline-flex items-center justify-center px-2 py-1 md:px-6 md:py-3 md:font-medium tracking-tighter text-[#FEFEFF] bg-gray-800 rounded-md group">
+                       <span
+                           class="absolute inset-0 w-full h-full mt-1 ml-1 transition-all duration-300 ease-in-out bg-green-600 rounded-md group-hover:mt-0 group-hover:ml-0"></span>
+                       <span class="absolute inset-0 w-full h-full bg-[#FEFEFF] rounded-md "></span>
+                       <span
+                           class="absolute inset-0 w-full h-full transition-all duration-200 ease-in-out delay-100 bg-green-600 rounded-md opacity-0 group-hover:opacity-100 "></span>
+                       <span
+                           class="relative text-green-600 transition-colors duration-200 ease-in-out delay-100 group-hover:text-[#FEFEFF]">Buy
+                           Now</span>
+                   </a>
+                   <button data-modal-target="default-modal" data-modal-toggle="default-modal"
+                       class="block mx-[15px] md:hidden" type="button">
+                       <i class="ri-align-justify text-[24px]"></i>
+                   </button>
+               </div>
+
+           </div>
+       </div>
+
+    <main class="main3 overflow-hidden">
         <h1 class="text-center font-bold text-5xl my-[25px] md:mt-[4vw] relative  text-green-500">Our Pricing</h1>
 
         <div class="flex flex-row justify-center  text-sm tracking-tight font-medium  my-[2vw]">
@@ -223,7 +252,7 @@
     </main>
 
 
-    <footer class="p-4  sm:p-6 bg-gray-800 md:-mx-[10vw] -mx-[37px]">
+    <footer class="p-4  sm:p-6 bg-gray-800">
         <div class="mx-auto max-w-screen-xl">
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
